Fix some large titles break the entire layout

--- a/app/globals.css
+++ b/app/globals.css
@@ -128,7 +128,11 @@
   }
 
   h1 {
-    @apply font-serif text-5xl my-8;
+    @apply font-serif text-5xl my-8 break-words;
+  }
+
+  article h1 {
+    @apply text-4xl sm:text-5xl;
   }
 
   article h2 {
